# reflash

./: encore.app  go.mod  go.sum
frontend/: bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
frontend/app/: Makefile  bun.lockb  eslint.config.mjs  package.json  vite.config.ts
frontend/app/src/: App.tsx  Router.tsx  index.css  main.tsx
frontend/app/src/api/: monolith.ts  study.ts
frontend/app/src/components/: app-sidebar.tsx  icons.tsx  line-chart.tsx  logo.tsx  mode-toggle.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  page-header.tsx
frontend/app/src/config/: app.ts  menu.ts
frontend/app/src/contexts/: QueryContext.tsx  ThemeContext.tsx
frontend/app/src/pages/: Calendar.tsx  Dashboard.tsx  Home.tsx  NoMatch.tsx  Notifications.tsx  PrivatePage.tsx  Work.tsx
frontend/app/src/stores/: project-store.ts
frontend/src/: Router.tsx  main.tsx
frontend/src/config/: app.ts
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Notifications.tsx  PrivatePage.tsx  Work.tsx
frontend/website/: .gitignore  bun.lockb  package.json
frontend/website/src/: App.css
infra/local/: Makefile  docker-compose.yml
infra/local/postgres/: create_databases.sh  docker-compose.yml
infra/postgres/: create_databases.sh
platform/agent/api/: .env  pyproject.toml
platform/agent/api/agent/: hello_world.py
platform/auth/: auth.go
platform/monolith/: .env  Makefile  go.mod  go.sum  main.go  migrate
platform/monolith/config/: config.go  config.yml
platform/monolith/logging/: logger.go
platform/monolith/utils/: context.go  router.go
(+58 files in other folders)
